--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
 <body>
 
     <h1 class="title">The Originals!</h1>
-   <div id="pokemon_container" class="pokemon-container">
-
-    
-   </div>
+   <div id="pokemon_container" class="pokemon-container"></div>
 
 
 <script type="text/javascript" src="api.js"></script>
